# isteam

./: .dockerignore  .example.env  .gitignore  .prod.env.enc  .travis.yml  Dockerfile  README.md  docker-compose.yml  id_rsa.enc  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  webpack-stats.json  webpack.config.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: ----------------.md  -----.md
app/: README.md  package.json  tsconfig.json
app/pages/: index.tsx
data/: README.md  package.json  tsconfig.json
data-accessor/: package.json
data/src/: index.ts
groupware/: admin.py  models.py  urls.py
groupware/migrations/: 0001_initial.py  0002_auto_20200913_2231.py  0003_session_creator.py  0004_auto_20200921_0303.py  0005_auto_20210102_0130.py
groupware/templates/: account.html  activities.html  layout.html
groupware/views/: accounts.py  activities.py  base.py  users.py
isteam/: context_processor.py  manage.py  package.json  urls.py  webpack-stats.json  webpack.config.js  wsgi.py
isteam/groupware/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
isteam/index/: models.py  urls.py  views.py
isteam/isteam/: asgi.py  urls.py  (+2 more)
main_page/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
recruit/: admin.py  admin_actions.py  forms.py  models.py  tests.py  urls.py  views.py
scripts/: local-init.sh  on-isteam.sh  on-travis.sh  run-local.sh
static/: index.js
templates/: form_layout.html  layout.html
user/: admin.py  apps.py  models.py  tests.py  urls.py
utils/: email.py  recaptcha.py
(+134 files in other folders)
