[tool.poetry]
name = "isteam"
version = "0.0.0"
description = "ISTEAM 홈페이지"
authors = ["이정현 <jeonghyun0126@outlook.com>", "유상진"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
boto3 = "^1.17.28"
gunicorn = "^20.0.4"
python-decouple = "^3.4"
django-webpack-loader = "^0.7.0"
Pillow = "^8.1.2"
